added new config file for AWS

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,17 @@ echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 - docker push cppragada/multi-nginx
 - docker push cppragada/multi-server
 - docker push cppragada/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  #below bucketname should be get from the AWS created bucket
+  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
+  bucket_path: 'docker-multi'
+on:
+  branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
  
