--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -9,7 +9,14 @@ metadata:
     # ADD ANNOTATION
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     # UPDATE ANNOTATION
+    certmanager.k8s.ip/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    -hosts:
+      - k8s-multi.com
+      - www.k8s-multi.com
+      secretName: k8s-multi-com
   rules:
     - http:
         paths:
